hphp/test/slow/invalid_argument/1380.php
<?php

var_dump(mysql_fetch_array(null, 0));
var_dump(mysql_fetch_object(null, 'stdClass'));
